--- a/fly.toml
+++ b/fly.toml
@@ -1,17 +1,15 @@
-# fly.toml - Fly.io deployment configuration for ETF Scraper
-# See https://fly.io/docs/reference/configuration/ for details
+# fly.toml app configuration file generated for etf-scraper-tadfad on 2026-01-22T17:35:25Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-app = 'etf-scraper'
-primary_region = 'iad'
+app = 'etf-scraper-tadfad'
+primary_region = 'dfw'
 
 [build]
 
-[env]
-  TZ = 'America/Chicago'
-  FLASK_APP = 'api_server.py'
-
 [http_service]
-  internal_port = 5000
+  internal_port = 8080
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
@@ -19,6 +17,7 @@ primary_region = 'iad'
   processes = ['app']
 
 [[vm]]
-  memory = '512mb'
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 256
